Make sure the Leaflet contribution footer is visible (was moved out of the viewport).

--- a/app/assets/stylesheets/components/_base.css.scss
+++ b/app/assets/stylesheets/components/_base.css.scss
@@ -125,12 +125,15 @@ h2 {
       position: relative;
     }
 
-
     .leaflet-popup-content-wrapper {
       -webkit-border-radius: 0 !important;
       border-radius: 0 !important;
     }
 
+    .leaflet-bottom {
+      // move leaflet bottom container into the viewport
+      bottom: 42px
+    }
   }
   #controls-container {
     position: absolute;
